--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "devconnector",
+  "name": "myfirstsocialmedia",
   "version": "1.0.0",
-  "description": "Social Network for developers",
+  "description": "This is a practice build of a social media platform. ",
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Sony Yang",
-  "license": "MIT",
+  "license": "N/A",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.1.0",
-    "express": "^4.17.1",
+    "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.0",
+    "mongoose": "^5.5.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.18.11"
   }
 }
